// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`xy_expression XYChart component it renders area 1`] = `
<Chart
  className="lnsChart"
  renderer="canvas"
>
  <inject-SettingsComponent-with-chartStore
    legendPosition="top"
    rotation={0}
    showLegend={false}
    showLegendDisplayValue={false}
  />
  <inject-AxisSpec-with-chartStore
    id="x"
    position="bottom"
    showGridLines={false}
    tickFormat={[Function]}
    title=""
  />
  <inject-AxisSpec-with-chartStore
    id="y"
    position="left"
    showGridLines={false}
    tickFormat={[Function]}
    title=""
  />
  <inject-AreaSeriesSpecComponent-with-chartStore
    data={
      Array [
        Object {
          "Label A": 1,
          "Label B": 2,
          "c": "I",
        },
        Object {
          "Label A": 1,
          "Label B": 5,
          "c": "J",
        },
      ]
    }
    enableHistogramMode={false}
    id="Label D"
    key="0"
    splitSeriesAccessors={
      Array [
        "Label D",
      ]
    }
    stackAccessors={Array []}
    timeZone="UTC"
    xAccessor="c"
    xScaleType="ordinal"
    yAccessors={
      Array [
        "Label A",
        "Label B",
      ]
    }
    yScaleType="linear"
  />
</Chart>
`;

exports[`xy_expression XYChart component it renders bar 1`] = `
<Chart
  className="lnsChart"
  renderer="canvas"
>
  <inject-SettingsComponent-with-chartStore
    legendPosition="top"
    rotation={0}
    showLegend={false}
    showLegendDisplayValue={false}
  />
  <inject-AxisSpec-with-chartStore
    id="x"
    position="bottom"
    showGridLines={false}
    tickFormat={[Function]}
    title=""
  />
  <inject-AxisSpec-with-chartStore
    id="y"
    position="left"
    showGridLines={false}
    tickFormat={[Function]}
    title=""
  />
  <inject-BarSeriesSpecComponent-with-chartStore
    data={
      Array [
        Object {
          "Label A": 1,
          "Label B": 2,
          "c": "I",
        },
        Object {
          "Label A": 1,
          "Label B": 5,
          "c": "J",
        },
      ]
    }
    enableHistogramMode={false}
    id="Label D"
    key="0"
    splitSeriesAccessors={
      Array [
        "Label D",
      ]
    }
    stackAccessors={Array []}
    timeZone="UTC"
    xAccessor="c"
    xScaleType="ordinal"
    yAccessors={
      Array [
        "Label A",
        "Label B",
      ]
    }
    yScaleType="linear"
  />
</Chart>
`;

exports[`xy_expression XYChart component it renders horizontal bar 1`] = `
<Chart
  className="lnsChart"
  renderer="canvas"
>
  <inject-SettingsComponent-with-chartStore
    legendPosition="top"
    rotation={90}
    showLegend={false}
    showLegendDisplayValue={false}
  />
  <inject-AxisSpec-with-chartStore
    id="x"
    position="left"
    showGridLines={false}
    tickFormat={[Function]}
    title=""
  />
  <inject-AxisSpec-with-chartStore
    id="y"
    position="bottom"
    showGridLines={false}
    tickFormat={[Function]}
    title=""
  />
  <inject-BarSeriesSpecComponent-with-chartStore
    data={
      Array [
        Object {
          "Label A": 1,
          "Label B": 2,
          "c": "I",
        },
        Object {
          "Label A": 1,
          "Label B": 5,
          "c": "J",
        },
      ]
    }
    enableHistogramMode={false}
    id="Label D"
    key="0"
    splitSeriesAccessors={
      Array [
        "Label D",
      ]
    }
    stackAccessors={Array []}
    timeZone="UTC"
    xAccessor="c"
    xScaleType="ordinal"
    yAccessors={
      Array [
        "Label A",
        "Label B",
      ]
    }
    yScaleType="linear"
  />
</Chart>
`;

exports[`xy_expression XYChart component it renders line 1`] = `
<Chart
  className="lnsChart"
  renderer="canvas"
>
  <inject-SettingsComponent-with-chartStore
    legendPosition="top"
    rotation={0}
    showLegend={false}
    showLegendDisplayValue={false}
  />
  <inject-AxisSpec-with-chartStore
    id="x"
    position="bottom"
    showGridLines={false}
    tickFormat={[Function]}
    title=""
  />
  <inject-AxisSpec-with-chartStore
    id="y"
    position="left"
    showGridLines={false}
    tickFormat={[Function]}
    title=""
  />
  <inject-LineSeriesSpecComponent-with-chartStore
    data={
      Array [
        Object {
          "Label A": 1,
          "Label B": 2,
          "c": "I",
        },
        Object {
          "Label A": 1,
          "Label B": 5,
          "c": "J",
        },
      ]
    }
    enableHistogramMode={false}
    id="Label D"
    key="0"
    splitSeriesAccessors={
      Array [
        "Label D",
      ]
    }
    stackAccessors={Array []}
    timeZone="UTC"
    xAccessor="c"
    xScaleType="ordinal"
    yAccessors={
      Array [
        "Label A",
        "Label B",
      ]
    }
    yScaleType="linear"
  />
</Chart>
`;

exports[`xy_expression XYChart component it renders stacked area 1`] = `
<Chart
  className="lnsChart"
  renderer="canvas"
>
  <inject-SettingsComponent-with-chartStore
    legendPosition="top"
    rotation={0}
    showLegend={false}
    showLegendDisplayValue={false}
  />
  <inject-AxisSpec-with-chartStore
    id="x"
    position="bottom"
    showGridLines={false}
    tickFormat={[Function]}
    title=""
  />
  <inject-AxisSpec-with-chartStore
    id="y"
    position="left"
    showGridLines={false}
    tickFormat={[Function]}
    title=""
  />
  <inject-AreaSeriesSpecComponent-with-chartStore
    data={
      Array [
        Object {
          "Label A": 1,
          "Label B": 2,
          "c": "I",
        },
        Object {
          "Label A": 1,
          "Label B": 5,
          "c": "J",
        },
      ]
    }
    enableHistogramMode={false}
    id="Label D"
    key="0"
    splitSeriesAccessors={
      Array [
        "Label D",
      ]
    }
    stackAccessors={
      Array [
        "c",
      ]
    }
    timeZone="UTC"
    xAccessor="c"
    xScaleType="ordinal"
    yAccessors={
      Array [
        "Label A",
        "Label B",
      ]
    }
    yScaleType="linear"
  />
</Chart>
`;

exports[`xy_expression XYChart component it renders stacked bar 1`] = `
<Chart
  className="lnsChart"
  renderer="canvas"
>
  <inject-SettingsComponent-with-chartStore
    legendPosition="top"
    rotation={0}
    showLegend={false}
    showLegendDisplayValue={false}
  />
  <inject-AxisSpec-with-chartStore
    id="x"
    position="bottom"
    showGridLines={false}
    tickFormat={[Function]}
    title=""
  />
  <inject-AxisSpec-with-chartStore
    id="y"
    position="left"
    showGridLines={false}
    tickFormat={[Function]}
    title=""
  />
  <inject-BarSeriesSpecComponent-with-chartStore
    data={
      Array [
        Object {
          "Label A": 1,
          "Label B": 2,
          "c": "I",
        },
        Object {
          "Label A": 1,
          "Label B": 5,
          "c": "J",
        },
      ]
    }
    enableHistogramMode={false}
    id="Label D"
    key="0"
    splitSeriesAccessors={
      Array [
        "Label D",
      ]
    }
    stackAccessors={
      Array [
        "c",
      ]
    }
    timeZone="UTC"
    xAccessor="c"
    xScaleType="ordinal"
    yAccessors={
      Array [
        "Label A",
        "Label B",
      ]
    }
    yScaleType="linear"
  />
</Chart>
`;

exports[`xy_expression XYChart component it renders stacked horizontal bar 1`] = `
<Chart
  className="lnsChart"
  renderer="canvas"
>
  <inject-SettingsComponent-with-chartStore
    legendPosition="top"
    rotation={90}
    showLegend={false}
    showLegendDisplayValue={false}
  />
  <inject-AxisSpec-with-chartStore
    id="x"
    position="left"
    showGridLines={false}
    tickFormat={[Function]}
    title=""
  />
  <inject-AxisSpec-with-chartStore
    id="y"
    position="bottom"
    showGridLines={false}
    tickFormat={[Function]}
    title=""
  />
  <inject-BarSeriesSpecComponent-with-chartStore
    data={
      Array [
        Object {
          "Label A": 1,
          "Label B": 2,
          "c": "I",
        },
        Object {
          "Label A": 1,
          "Label B": 5,
          "c": "J",
        },
      ]
    }
    enableHistogramMode={false}
    id="Label D"
    key="0"
    splitSeriesAccessors={
      Array [
        "Label D",
      ]
    }
    stackAccessors={
      Array [
        "c",
      ]
    }
    timeZone="UTC"
    xAccessor="c"
    xScaleType="ordinal"
    yAccessors={
      Array [
        "Label A",
        "Label B",
      ]
    }
    yScaleType="linear"
  />
</Chart>
`;
